fixed fadeinobserver on small devices and hashtag scroll-margin-top

--- a/app/globals.css
+++ b/app/globals.css
@@ -641,7 +641,7 @@ p.about-cta {
             border: 0.5px solid var(--color-2);
             border-radius: var(--btn-radius);
             padding: calc(var(--gap) / 2);
-            scroll-margin-top: var(--scroll-margin-top);
+            scroll-margin-top: calc(var(--scroll-margin-top) + 20px);
         }
     }
 }
